force-app/main/default/objects/Sales_order__c/Sales_order__c.object-meta.xml
<CustomObject>
    <description>this obejct will show the sales orders</description>
    <label>Sales order</label>
    <nameField>
        <label>Sales order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>