force-app/main/default/objects/Sales_order__c/fields/customer__c.field-meta.xml
<CustomField>
    <fullName>customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>this will choose the customer</description>
    <label>customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales orders</relationshipLabel>
    <relationshipName>Sales_orders</relationshipName>
    <type>Lookup</type>
</CustomField>