force-app/main/default/objects/Sales_order__c/fields/Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date__c</fullName>
    <description>This field will store the expected delivery date of the order</description>
    <label>Delivery Date</label>
    <type>Date</type>
</CustomField>