force-app/main/default/objects/Sales_order__c/fields/Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Date__c</fullName>
    <description>this field will store the delivery date.</description>
    <label>Order Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>