force-app/main/default/objects/Sales_order__c/fields/order_number__c.field-meta.xml
<CustomField>
    <fullName>order_number__c</fullName>
    <description>this field will store the order number</description>
    <displayFormat>ORN-{000}</displayFormat>
    <label>order number</label>
    <type>AutoNumber</type>
</CustomField>