force-app/main/default/objects/Sales_order__c/validationRules/amount_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>amount_validation</fullName>
    <active>true</active>
    <description>This will validate that the order amount must be grearter than 0</description>
    <errorConditionFormula>Total_Amount__c  &lt;= 0</errorConditionFormula>
    <errorDisplayField>Total_Amount__c</errorDisplayField>
    <errorMessage>Please enter tha valid bill amount</errorMessage>
</ValidationRule>