force-app/main/default/objects/Sales_order__c/validationRules/delivery_date_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>delivery_date_validation</fullName>
    <active>true</active>
    <description>This will validate that the delivery date cannot be before than order date</description>
    <errorConditionFormula>Delivery_Date__c  &lt;  Order_Date__c</errorConditionFormula>
    <errorMessage>Please enter the valid delivery date</errorMessage>
</ValidationRule>